<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity"
    android:orientation="vertical"
    android:background="#012759"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/paisapal_logo_rounded"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="10dp"
        android:background="#f8f9fa">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_form_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#012759"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/signup_form_username"
                android:textColor="#012759" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/signup_usernameEditText"
                android:backgroundTint="#5271FF"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/signup_form_email"
                android:textColor="#012759" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/signup_emailEditText"
                android:backgroundTint="#5271FF"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/signup_form_password"
                android:textColor="#012759" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/signup_passwordEditText"
                android:backgroundTint="#5271FF"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/signup_form_confirm_password"
                android:textColor="#012759" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/signup_confirmPasswordEditText"
                android:backgroundTint="#5271FF"
                android:textColor="#000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_button"
                android:text="@string/signup_form_signup"
                android:textSize="18sp"
                android:textColor="#fff"
                android:backgroundTint="#004AAD"
                android:layout_marginTop="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_loginButton"
                android:text="@string/signup_form_login"
                android:textSize="18sp"
                android:textColor="#fff"
                android:backgroundTint="#5271FF"
                android:layout_marginTop="8dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
